<resources>
    <string name="want_to_help">Хочу помочь</string>
    <string name="loading">Загрузка...</string>
    <string name="choose_a_category_of_help">Выберите категорию помощи</string>
    <string name="news">Новости</string>
    <string name="search">Поиск</string>
    <string name="help">Помочь</string>
    <string name="stories">Истории</string>
    <string name="profile">Профиль</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="field_of_activity">Сфера деятельности</string>
    <string name="receive_push_notifications">Получать push-уведомления</string>
    <string name="your_friends">Ваши друзья</string>
    <string name="sign_out">Выйти из аккаунта</string>
    <string name="children">Дети</string>
    <string name="adults">Взрослые</string>
    <string name="elderly">Пожилые</string>
    <string name="animals">Животные</string>
    <string name="events">Мероприятия</string>
    <string name="greeting_at_authorization">Для участия в мероприятиях войдите\nв приложение через социальные сети</string>
    <string name="log_in">Авторизация</string>
    <string name="or_log_in_through_the_app">Или авторизуйтесь через приложение</string>
    <string name="e_mail">E-mail</string>
    <string name="enter_e_mail">Введите e-mail</string>
    <string name="password">Пароль</string>
    <string name="enter_password">Введите пароль</string>
    <string name="enter">Войти</string>
    <string name="forgot_your_password"><u>Забыли пароль?</u></string>
    <string name="registration"><u>Регистрация</u></string>
    <string name="wrong_login">Пользователь не найден</string>
    <string name="wrong_password">Неверный пароль</string>
    <string name="by_events">По мероприятиям</string>
    <string name="for_npo">По НКО</string>
    <string name="keywords">Ключевые слова:</string>
    <string name="searching_result">Результаты поиска:</string>
    <string name="enter_the_name_of_the_organization">Введите название организации</string>
    <string name="do_you_have_a_question">У вас есть вопросы?</string>
    <string name="write_to_us">Напишите нам</string>
    <string name="go_to_organization_website">Перейти на сайт организаии</string>
    <string name="left">Осталось</string>
    <string name="no_response_from_the_network">no response from the network</string>
    <string name="failed_to_load_news">failed to load news</string>
</resources>