<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_greeting_at_authorization"
            style="@style/TextStyle13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:text="@string/greeting_at_authorization"
            app:layout_constraintEnd_toStartOf="@id/guide_right"
            app:layout_constraintStart_toStartOf="@id/guide_left"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_application_icons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@id/guide_right"
            app:layout_constraintStart_toStartOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/tv_greeting_at_authorization">

            <ImageView
                android:id="@+id/iv_fb_logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_fb" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_fb_logo"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_vk" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_fb_logo"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_ok" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_log_in_through_the_app"
            style="@style/TextStyle13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:text="@string/or_log_in_through_the_app"
            app:layout_constraintEnd_toStartOf="@id/guide_right"
            app:layout_constraintStart_toStartOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/cl_application_icons" />

        <TextView
            android:id="@+id/tv_guide_left"
            style="@style/TextStyle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="20dp"
            android:text="@string/E_mail"
            app:layout_constraintStart_toStartOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/tv_log_in_through_the_app" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_edit_e_mail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintEnd_toStartOf="@id/guide_right"
            app:layout_constraintStart_toStartOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/tv_guide_left"
            app:layout_constraintWidth_default="spread">

            <EditText
                android:id="@+id/et_edit_e_mail"
                style="@style/TextStylePopupPlaceholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black_12"
                android:hint="@string/enter_e_mail"
                android:textColor="@color/black_70" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_password"
            style="@style/TextStyle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="26dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/til_edit_e_mail" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintEnd_toStartOf="@id/guide_right"
            app:layout_constraintStart_toStartOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            app:layout_constraintWidth_default="spread"
            app:passwordToggleDrawable="@drawable/visibillity_selection"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_edit_password"
                style="@style/TextStylePopupPlaceholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black_12"
                android:hint="@string/enter_password"
                android:password="true"
                android:textColor="@color/black_70" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/b_sign_in"
            style="@style/TextStyle17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="26dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/leaf"
            android:gravity="center"
            android:text="@string/enter"
            app:layout_constraintEnd_toStartOf="@id/guide_right"
            app:layout_constraintStart_toStartOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/til_password"
            app:layout_constraintWidth_default="spread" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guide_right"
            app:layout_constraintStart_toStartOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/b_sign_in"
            app:layout_constraintWidth_default="spread">

            <TextView
                android:id="@+id/tv_forgot_your_password"
                style="@style/Link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_registration"
                style="@style/Link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


